# madlib

./: .gitignore  Cargo.toml  LICENCE  README.md
src/: lib.rs
src/types/: chats.rs  messages.rs  mod.rs  reactions.rs  upload.rs
